--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title lang="en">WebStudio</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" 
     rel="stylesheet">
@@ -17,7 +18,7 @@
             </a>
             <ul class="nav-list">
                 <li class="nav-item"> 
-                    <a class="nav-link" href="">Студия</a>
+                    <a class="nav-link current" href="./index.html">Студия</a>
                 </li>
                 <li class="nav-item"> 
                     <a class="nav-link" href="./portfolio.html">Портфолио</a>
