--- a/portfolio.html
+++ b/portfolio.html
@@ -4,137 +4,151 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title lang="en">WebStudio</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" 
     rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <a href="./index.html" lang="en">WebStudio</a>
-            <ul>
-                <li> 
-                    <a href="">Студия</a>
+    <header class="header">
+        <nav class="nav">
+            <a class="logo" href="./index.html" lang="en">
+                <span class="logo-part-one">Web</span><span class="logo-part-two">Studio</span>
+            </a>
+            <ul class="nav-list">
+                <li class="nav-item"> 
+                    <a class="nav-link" href="./index.html">Студия</a>
                 </li>
-                <li> 
-                    <a href="">Портфолио</a>
+                <li class="nav-item"> 
+                    <a class="nav-link current" href="./portfolio.html">Портфолио</a>
                 </li>
-                <li> 
-                    <a href="">Контакты</a>
+                <li class="nav-item"> 
+                    <a class="nav-link" href="">Контакты</a>
                 </li>
             </ul>
         </nav>
-        <ul>
-            <li> 
-                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <ul class="contacts">
+            <li class="contact-item"> 
+                <a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
-            <li> 
-                <a href="tel:+380961111111">+38 096 111 11 11</a>
+            <li class="contact-item"> 
+                <a class="contact-link" href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
         </ul>
     </header>
     <main>
-       <section>
-           <h1>Портфолио</h1>
-           <ul>
-               <li>
-                   <button type="button">Все</button>
+       <section class="portfolio-section">
+           <h1 class="portfolio-title">Портфолио</h1>
+           <ul class="portfolio-filters">
+               <li class="filter-item">
+                   <button class="filter" type="button">Все</button>
                </li>
-               <li>
-                    <button type="button">Веб-сайты</button>
+               <li class="filter-item">
+                    <button class="filter" type="button">Веб-сайты</button>
                 </li>
-                <li>
-                    <button type="button">Приложения</button>
+                <li class="filter-item">
+                    <button class="filter" type="button">Приложения</button>
                 </li>
-                <li>
-                    <button type="button">Дизайн</button>
+                <li class="filter-item">
+                    <button class="filter" type="button">Дизайн</button>
                 </li>
-                <li>
-                    <button type="button">Маркетинг</button>
+                <li class="filter-item">
+                    <button class="filter" type="button">Маркетинг</button>
                 </li>
            </ul>
-           <ul>
-               <li>
-                   <a href="">
-                       <img src="./images-portfolio/portf-1.png" alt="">
-                       <h2>Технокряк</h2>
-                       <p>Веб-сайт</p>
+           <ul class="portfolio-options">
+               <li class="option-item">
+                   <a class="portfolio-card" href="">
+                       <img class="portfolio-pic" src="./images-portfolio/portf-1.png" alt="">
+                       <h2 class="card-name">Технокряк</h2>
+                       <p class="card-type">Веб-сайт</p>
+                       <p class="card-text"></p>
                    </a>
                </li>
-               <li>
-                   <a href="">
-                       <img src="./images-portfolio/portf-2.png" alt="">
-                       <h2>Постер New Orlean vs Golden Star</h2>
-                       <p>Дизайн</p>
+               <li class="option-item">
+                   <a class="portfolio-card" href="">
+                       <img class="portfolio-pic" src="./images-portfolio/portf-2.png" alt="">
+                       <h2 class="card-name">Постер New Orlean vs Golden Star</h2>
+                       <p class="card-type">Дизайн</p>
+                       <p class="card-text"></p>
                    </a>
                </li>
-               <li>
-                   <a href="">
-                       <img src="./images-portfolio/portf-3.png" alt="">
-                       <h2>Ресторан Seafood</h2>
-                       <p>Приложение</p>
+               <li class="option-item">
+                   <a class="portfolio-card" href="">
+                       <img class="portfolio-pic" src="./images-portfolio/portf-3.png" alt="">
+                       <h2 class="card-name">Ресторан Seafood</h2>
+                       <p class="card-type">Приложение</p>
+                       <p class="card-text"></p>
                    </a>
                </li>
-               <li>
-                   <a href="">
-                       <img src="./images-portfolio/portf-4.png" alt="">
-                       <h2>Проект Prime</h2>
-                       <p>Маркетинг</p>
+               <li class="option-item">
+                   <a class="portfolio-card" href="">
+                       <img class="portfolio-pic" src="./images-portfolio/portf-4.png" alt="">
+                       <h2 class="card-name">Проект Prime</h2>
+                       <p class="card-type">Маркетинг</p>
+                       <p class="card-text"></p>
                    </a>
                </li>
-               <li>
-                   <a href="">
-                       <img src="./images-portfolio/portf-5.png" alt="">
-                       <h2>Проект Boxes</h2>
-                       <p>Приложение</p>
+               <li class="option-item">
+                   <a class="portfolio-card" href="">
+                       <img class="portfolio-pic" src="./images-portfolio/portf-5.png" alt="">
+                       <h2 class="card-name">Проект Boxes</h2>
+                       <p class="card-type">Приложение</p>
+                       <p class="card-text"></p>
                    </a>
                </li>
-               <li>
-                   <a href="">
-                       <img src="./images-portfolio/portf-6.png" alt="">
-                       <h2>Inspiration has no Borders</h2>
-                       <p>Веб-сайт</p>
+               <li class="option-item">
+                   <a class="portfolio-card" href="">
+                       <img class="portfolio-pic" src="./images-portfolio/portf-6.png" alt="">
+                       <h2 class="card-name">Inspiration has no Borders</h2>
+                       <p class="card-type">Веб-сайт</p>
+                       <p class="card-text"></p>
                    </a>
                </li>
-               <li>
-                   <a href="">
-                       <img src="./images-portfolio/portf-7.png" alt="">
-                       <h2>Издание Limited Edition</h2>
-                       <p>Дизайн</p>
+               <li class="option-item">
+                   <a class="portfolio-card" href="">
+                       <img class="portfolio-pic" src="./images-portfolio/portf-7.png" alt="">
+                       <h2 class="card-name">Издание Limited Edition</h2>
+                       <p class="card-type">Дизайн</p>
+                       <p class="card-text"></p>
                    </a>
                </li>
-               <li>
-                   <a href="">
-                       <img src="./images-portfolio/portf-8.png" alt="">
-                       <h2>Проект LAB</h2>
-                       <p>Маркетинг</p>
+               <li class="option-item">
+                   <a class="portfolio-card" href="">
+                       <img class="portfolio-pic" src="./images-portfolio/portf-8.png" alt="">
+                       <h2 class="card-name">Проект LAB</h2>
+                       <p class="card-type">Маркетинг</p>
+                       <p class="card-text"></p>
                    </a>
                </li>
-               <li>
-                   <a href="">
-                       <img src="./images-portfolio/portf-9.png" alt="">
-                       <h2>Growing Business</h2>
-                       <p>Приложение</p>
+               <li class="option-item">
+                   <a class="portfolio-card" href="">
+                       <img class="portfolio-pic" src="./images-portfolio/portf-9.png" alt="">
+                       <h2 class="card-name">Growing Business</h2>
+                       <p class="card-type">Приложение</p>
+                       <p class="card-text"></p>
                    </a>
                </li>
            </ul>
        </section>
     </main>
     
-    <footer>
+    <footer class="footer">
         
-        <a href="./index.html" lang="en">WebStudio</a>
+        <a class="logo" href="./index.html" lang="en">
+            <span class="logo-part-one">Web</span><span class="logo-part-two-footer">Studio</span>
+        </a>
 
-        <ul>
-            <li>
-                <a href="https://goo.gl/maps/QC9Pbh4n8E9bidxp7">г. Киев, пр-т Леси Украинки, 26</a>
+        <ul class="footer-list">
+            <li class="footer-item">
+                <a class="footer-address" href="https://goo.gl/maps/QC9Pbh4n8E9bidxp7">г. Киев, пр-т Леси Украинки, 26</a>
             </li>
             <li> 
-                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a class="footer-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
             <li> 
-                <a href="tel:+380961111111">+38 096 111 11 11</a>
+                <a class="footer-link" href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
         </ul>
     </footer>
