убирает маркеры у списков и подчеркивание у ссылок, добавляет описание картинок

--- a/portfolio.html
+++ b/portfolio.html
@@ -60,7 +60,7 @@
            <ul class="portfolio-options">
                <li class="option-item">
                    <a class="portfolio-card" href="">
-                       <img class="portfolio-pic" src="./images-portfolio/portf-1.png" alt="">
+                       <img class="portfolio-pic" src="./images-portfolio/portf-1.png" alt="ноутбук с открытым сайтом">
                        <h2 class="card-name">Технокряк</h2>
                        <p class="card-type">Веб-сайт</p>
                        <p class="card-text"></p>
@@ -68,7 +68,7 @@
                </li>
                <li class="option-item">
                    <a class="portfolio-card" href="">
-                       <img class="portfolio-pic" src="./images-portfolio/portf-2.png" alt="">
+                       <img class="portfolio-pic" src="./images-portfolio/portf-2.png" alt="игра в баскетбол">
                        <h2 class="card-name">Постер New Orlean vs Golden Star</h2>
                        <p class="card-type">Дизайн</p>
                        <p class="card-text"></p>
@@ -76,7 +76,7 @@
                </li>
                <li class="option-item">
                    <a class="portfolio-card" href="">
-                       <img class="portfolio-pic" src="./images-portfolio/portf-3.png" alt="">
+                       <img class="portfolio-pic" src="./images-portfolio/portf-3.png" alt="эмблема ресторана с большой рыбой">
                        <h2 class="card-name">Ресторан Seafood</h2>
                        <p class="card-type">Приложение</p>
                        <p class="card-text"></p>
@@ -84,7 +84,7 @@
                </li>
                <li class="option-item">
                    <a class="portfolio-card" href="">
-                       <img class="portfolio-pic" src="./images-portfolio/portf-4.png" alt="">
+                       <img class="portfolio-pic" src="./images-portfolio/portf-4.png" alt="наушники">
                        <h2 class="card-name">Проект Prime</h2>
                        <p class="card-type">Маркетинг</p>
                        <p class="card-text"></p>
@@ -92,7 +92,7 @@
                </li>
                <li class="option-item">
                    <a class="portfolio-card" href="">
-                       <img class="portfolio-pic" src="./images-portfolio/portf-5.png" alt="">
+                       <img class="portfolio-pic" src="./images-portfolio/portf-5.png" alt="две коробки">
                        <h2 class="card-name">Проект Boxes</h2>
                        <p class="card-type">Приложение</p>
                        <p class="card-text"></p>
@@ -100,7 +100,7 @@
                </li>
                <li class="option-item">
                    <a class="portfolio-card" href="">
-                       <img class="portfolio-pic" src="./images-portfolio/portf-6.png" alt="">
+                       <img class="portfolio-pic" src="./images-portfolio/portf-6.png" alt="монитор">
                        <h2 class="card-name">Inspiration has no Borders</h2>
                        <p class="card-type">Веб-сайт</p>
                        <p class="card-text"></p>
@@ -108,7 +108,7 @@
                </li>
                <li class="option-item">
                    <a class="portfolio-card" href="">
-                       <img class="portfolio-pic" src="./images-portfolio/portf-7.png" alt="">
+                       <img class="portfolio-pic" src="./images-portfolio/portf-7.png" alt="открытая книга с картинками">
                        <h2 class="card-name">Издание Limited Edition</h2>
                        <p class="card-type">Дизайн</p>
                        <p class="card-text"></p>
@@ -116,7 +116,7 @@
                </li>
                <li class="option-item">
                    <a class="portfolio-card" href="">
-                       <img class="portfolio-pic" src="./images-portfolio/portf-8.png" alt="">
+                       <img class="portfolio-pic" src="./images-portfolio/portf-8.png" alt="бирка">
                        <h2 class="card-name">Проект LAB</h2>
                        <p class="card-type">Маркетинг</p>
                        <p class="card-text"></p>
@@ -124,7 +124,7 @@
                </li>
                <li class="option-item">
                    <a class="portfolio-card" href="">
-                       <img class="portfolio-pic" src="./images-portfolio/portf-9.png" alt="">
+                       <img class="portfolio-pic" src="./images-portfolio/portf-9.png" alt="работающий ноутбук">
                        <h2 class="card-name">Growing Business</h2>
                        <p class="card-type">Приложение</p>
                        <p class="card-text"></p>
